# autogame

./: .gitignore  README.md  config.example.yaml  config.yaml  main.py  pyproject.toml
core/: common.py  logger.py  notify.py  scheduler.py
tasks/maa/: client.py
tasks/maaend/: client.py
tasks/skyland_sign/: README.md  TOKEN.txt  client.py  main.py  skyland.py
tools/: __init__.py  config.py  logger.py  webhook.py
webhook/: __init__.py  listener.py
